syntax = "proto3";

option csharp_namespace = "gRPC.Api.Protos";

service Login {
	rpc Login (LoginRequest) returns (LoginReplay);
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginReplay {
	string access_token = 1;
}